# spingus

./: .gitignore  Cargo.toml  Dockerfile.coordinator  Dockerfile.node  dummy.rs  gcp-test.py
common/: Cargo.toml
common/src/: direct.rs  lib.rs
coordinator/: Cargo.toml
coordinator/src/: main.rs
node/: Cargo.toml
node/src/: main.rs
