[workspace]
resolver = "2"
members = ["common", "coordinator", "node"]

[package]
name = "psyche-workspace"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "dummy.rs"

[workspace.dependencies]
anyhow = "1.0"
futures = "0.3.30"
futures-timer = "3.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

libp2p = { version = "0.52.3", features = [
    "identify",
    "ping",
    "tokio",
    "gossipsub",
    "macros",
    "relay",
    "kad",
    "rsa",
    "ed25519",
    "quic",
    "request-response",
    "dns",
    "tcp",
    "dcutr",
    "memory-connection-limits",
    "noise",
    "yamux",
] }
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.81"
