[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

libp2p = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
common = { path = "../common" }
async-trait = { workspace = true }
